--- a/src/site.ejs
+++ b/src/site.ejs
@@ -54,7 +54,7 @@
 
     </style>
 </head>
-<body class="font-custom bg-background">
+<body class="font-custom bg-white">
 <section class="bg-cover bg-center flex flex-col justify-center pt-9 min-h-screen md:w-full relative"
          style="background-image: url(image/restpobocka.jpg)">
     <header id="header" class="transition duration-300 absolute md:fixed w-full z-20 top-0 start-0">
@@ -82,7 +82,7 @@
                 <a href="https://www.instagram.com/restcafe.cz/"
                    class="transition-transform"
                    target="_blank">
-                    <svg viewBox="0 0 30 30" fill="#1A5c12" class="h-10 transition-colors duration-300">
+                    <svg viewBox="0 0 30 30" fill="#901A2C" class="h-10 transition-colors duration-300">
                         <circle cx="15" cy="15" r="4"></circle>
                         <path
                                 d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z"
@@ -92,7 +92,7 @@
                 <a href="https://www.facebook.com/restcafecz/"
                    class="transition-transform"
                    target="_blank">
-                    <svg viewBox="0 0 24 24" fill="#1A5c12" class="h-8 transition-colors duration-300">
+                    <svg viewBox="0 0 24 24" fill="#901A2C" class="h-8 transition-colors duration-300">
                         <path
                                 d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z"
                         ></path>
@@ -133,7 +133,7 @@
                 <div class="flex flex-row items-center mt-auto">
                     <a href="https://www.instagram.com/restcafe.cz/"
                        target="_blank">
-                        <svg viewBox="0 0 30 30" fill="#8F1628" class="h-10 transition-colors duration-300">
+                        <svg viewBox="0 0 30 30" fill="#901A2C" class="h-10 transition-colors duration-300">
                             <circle cx="15" cy="15" r="4"></circle>
                             <path
                                     d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z"
@@ -143,7 +143,7 @@
                     <a href="https://www.facebook.com/restcafecz/"
                        class="ml-2"
                        target="_blank">
-                        <svg viewBox="0 0 24 24" fill="#8F1628" class="h-8 transition-colors duration-300">
+                        <svg viewBox="0 0 24 24" fill="#901A2C" class="h-8 transition-colors duration-300">
                             <path
                                     d="M22,0H2C0.895,0,0,0.895,0,2v20c0,1.105,0.895,2,2,2h11v-9h-3v-4h3V8.413c0-3.1,1.893-4.788,4.659-4.788 c1.325,0,2.463,0.099,2.795,0.143v3.24l-1.918,0.001c-1.504,0-1.795,0.715-1.795,1.763V11h4.44l-1,4h-3.44v9H22c1.105,0,2-0.895,2-2 V2C24,0.895,23.105,0,22,0z"
                             ></path>
@@ -774,7 +774,7 @@
          viewBox="-47 -47 564.00 564.00" enable-background="new 0 0 470 470"
          stroke="#FFF" stroke-width="0.0047">
         <g stroke-width="0">
-            <rect x="-47" y="-47" width="564.00" height="564.00" rx="282" fill="#1A5c12" />
+            <rect x="-47" y="-47" width="564.00" height="564.00" rx="282" fill="#901A2C" />
         </g>
         <g stroke-linecap="round" stroke-linejoin="round" />
         <g>
