--- a/src/site.ejs
+++ b/src/site.ejs
@@ -34,7 +34,7 @@
 
 		.custom-underline:hover,
 		.custom-underline:focus {
-			color: #1A5c12;
+			color: #585858;
 		}
 
 		.custom-underline-footer:hover,
