--- a/src/site.ejs
+++ b/src/site.ejs
@@ -393,7 +393,7 @@
                         </li>
                     </ul>
                     <p class="flex pt-4 pl-4 italic text-black">*dostupné příchutě na vyžádání u obsluhy</p>
-                    <p class="flex pt-4 pl-4 italic text-black">**Ovesné, kokosové, hrachové</p>
+                    <p class="flex pt-4 pl-4 italic text-black">**ovesné, kokosové, hrachové</p>
                 </div>
             </div>
 
