update sezonní nabídka

--- a/src/site.ejs
+++ b/src/site.ejs
@@ -404,37 +404,37 @@
                 <div class="px-2 py-4">
                     <ul class="text-black">
                         <li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-                            <span class="flex">Espresso Tonic</span>
+                            <span class="flex">Dirty Chai Latte</span>
                             <span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 
-                            <span>99/109 kč Kč</span>
+                            <span>110/119 Kč</span>
                         </li>
                         <li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-                            <span class="flex">Frappé 300/400 ml</span>
+                            <span class="flex">Pumpkin spice</span>
                             <span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 
-                            <span>99/109 Kč</span>
+                            <span>115/125 Kč</span>
                         </li>
                         <li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-                            <span class="flex">Cold brew 200/250 ml</span>
+                            <span class="flex">Perníkové Latte</span>
                             <span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 
-                            <span>89/99 Kč</span>
+                            <span>115/125 Kč</span>
                         </li>
                         <li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-                            <span class="flex">Mango Matcha</span>
+                            <span class="flex">Pink Chai</span>
                             <span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 
-                            <span>119 Kč</span>
+                            <span>95/105 Kč</span>
                         </li>
                         <li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-                            <span class="flex">Zázvorová limonáda</span>
+                            <span class="flex">Víno</span>
                             <span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 
-                            <span>69 Kč</span>
+                            <span>89 Kč</span>
                         </li>
                         <li class="flex justify-between items-center py-2 flex-row pointer-events-none">
-                            <span class="flex">Mate</span>
+                            <span class="flex">Limonáda Ginger/ Mate</span>
                             <span class="flex-grow border-b-2 border-dotted rounded-none border-gray-400"></span>
 
                             <span>69 Kč</span>
